# mostlyai-engine

./: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  sugar-ray.sh
.beads/: issues.jsonl
history/: IMPLEMENTATION_PLAN.md
mostlyai/engine/: __init__.py  _artifact.py  _logging.py  _stats.py  _train.py  _training_utils.py  _workspace.py  analysis.py  cluster-run.sh  domain.py  encoding.py  generation.py  slim-argn.py  splitting.py  training.py
mostlyai/engine/_encoding_types/tabular/: numeric.py
mostlyai/engine/_tabular/: generation_core.py  generation_gpu.py  interface.py  tensor_utils.py  training.py
plans/: pytorch-training-cpu-performance-optimization.md
tests/: test_generation_gpu.py  test_tensor_interface_equivalence.py  test_tensor_utils.py
tests/end_to_end/: conftest.py  test_numeric.py  test_tabular_flat.py  test_tabular_sequential.py  test_tabular_sequential_context.py
