[project]
name = "mostlyai-engine"
version = "2.3.3"
description = "Synthetic Data Engine"
authors = [{ name = "MOSTLY AI", email = "dev@mostly.ai" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "joblib>=1.4.2",
    "scikit-learn>=1.4.0",
    "psutil>=5.9.5,<6",  # upgrade when colab psutil is updated
    "opacus>=1.5.4",
    "torch>=2.5.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-rerunfailures>=15.0",
    "ruff>=0.11",  # sync'ed with .pre-commit-config
    "pre-commit>=4.0",
    "twine>=6.1",
    "ipykernel>=6.25",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[crystal, python]>=0.29",
    "mkdocs-material>=9.0",
    "mkdocs-llmstxt>=0.2",
    "griffe>=1.0",
    "pymdown-extensions>=10.0",
    "griffe-fieldz>=0.2",
    "black>=25.0",
]

[project.urls]
homepage = "https://github.com/mostly-ai/mostlyai-engine"
repository = "https://github.com/mostly-ai/mostlyai-engine"
documentation = "https://mostly-ai.github.io/mostlyai-engine/"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.sdist]
include = ["mostlyai/engine"]

[tool.hatch.build.targets.wheel]
include = ["mostlyai/engine"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
[tool.ruff.format]
exclude = ["examples/*.ipynb"]
[tool.ruff.lint]
extend-select = ["I"]
